--- a/style.css
+++ b/style.css
@@ -158,3 +158,11 @@ button:hover {
     opacity: 1;
   }
 }
+.hotel-image {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  display: block;
+}
