--- a/style.css
+++ b/style.css
@@ -94,3 +94,15 @@ button:hover {
   margin-top: 10px;
   font-weight: bold;
 }
+.step-btn {
+  padding: 2px 6px;
+  font-size: 14px;
+  background-color: #e0e0e0;
+  color: #333;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+}
+
+.step-btn:hover {
+  background-color: #ccc;
+}
